--- a/bio.html
+++ b/bio.html
@@ -24,26 +24,29 @@
       <p>
 
       <p class="intro">
-        Dr. Rainer Simon is a Scientist at the AIT Austrian Institute of Technology. He holds a 
-        master's in telecommunications engineering and a doctorate in computer science from the Vienna
-        University of Technology. Rainer has been working in the field of multimedia information management 
-        and retrieveal for more than 10 years, with a particular focus on technologies and user interfaces
-        that process and visualize geospatial information. His current research interest is in the application
-        of Linked (Geo) Data methods and visualization techniques in the Digital Humanities and Digital 
-        Library domains. Rainer has been involved in several national and international research projects, 
-        published various papers in his area, and served as a programme committee member and reviewer for 
-        relevant scientific workshops and publications in the field.
+        Dr. Rainer Simon is a Scientist at the <a href="http://www.ait.ac.at">AIT Austrian Institute of
+        Technology</a>. He holds a master's in telecommunications engineering and a doctorate in computer 
+        science from the Vienna University of Technology. Rainer has been working in the field of multimedia
+        information management and retrieveal for more than 10 years, with a particular focus on technologies 
+        and user interfaces that process and visualize geospatial information. His current research interest
+        is in the application of Linked (Geo) Data methods and visualization techniques in the <i>Digital
+        Humanities</i> and <i>Digital Library</i> domains. Rainer has been involved in several national and 
+        international research projects, published various papers in his area, and served as a programme committee 
+        member and reviewer for relevant scientific workshops and publications in the field.
       </p>
       
       <p>
-        Rainer's recent activities include participation in the EU-funded EuropeanaConnect project, where
+        Rainer's recent activities include participation in the EU-funded
+        <a href="http://www.europeanaconnect.eu/">Europeana<i>Connect</i></a> project, where
         he lead a research and development task on collaborative semantic media annotation; and his role as
-        Co-Investigator and Principal Developer for Pelagios, a digital classics network which interconnects 
-        heterogeneous digital content from the domain of Ancient World research by means of a common semantic 
-        reference framework. Rainer has also contributed to open source software, such as the Web archival 
-        analysis and visualization tool 'Monitrix' or the image annotation library 'Annotorious', of which 
-        he is the lead maintainer. Presently, Rainer serves as the Co-Investigator and technical lead of the 
-        Andrew W. Mellon Foundation-funded project 'Pelagios 3 - Early Geospatial Documents'.
+        Co-Investigator and Principal Developer for <a href="http://pelagios-project.blogspot.co.uk">Pelagios</a>, 
+        a digital classics network which interconnects heterogeneous digital content from the domain of Ancient 
+        World research by means of a common semantic reference framework. Rainer has also been contributing to open
+        source software, such as the Web archival analysis and visualization tool
+        <a href="http://github.com/ukwa/monitrix">Monitrix</a> or the image annotation library 
+        <a href="http://annotorious.github.io">Annotorious</a>, of which he is also the lead maintainer. Presently,
+        Rainer serves as the Co-Investigator and technical lead of the project 'Pelagios 3 - Early Geospatial Documents',
+        funded by the Andrew W. Mellon Foundation.
       </p>
     </div>
   </body>
