--- a/bio.html
+++ b/bio.html
@@ -45,7 +45,7 @@
         source software, such as the Web archival analysis and visualization tool
         <a href="http://github.com/ukwa/monitrix">Monitrix</a> or the image annotation library 
         <a href="http://annotorious.github.io">Annotorious</a>, of which he is also the lead maintainer. Presently,
-        Rainer serves as the Co-Investigator and technical lead of the project 'Pelagios 3 - Early Geospatial Documents',
+        Rainer serves as the Co-Investigator and Technical Director of the project 'Pelagios 3 - Early Geospatial Documents',
         funded by the Andrew W. Mellon Foundation.
       </p>
     </div>
