--- a/bio.html
+++ b/bio.html
@@ -45,8 +45,10 @@
         source software, such as the Web archival analysis and visualization tool
         <a href="http://github.com/ukwa/monitrix">Monitrix</a> or the image annotation library 
         <a href="http://annotorious.github.io">Annotorious</a>, of which he is also the lead maintainer. Presently,
-        Rainer serves as the Co-Investigator and Technical Director of the project 'Pelagios 3 - Early Geospatial Documents',
-        funded by the Andrew W. Mellon Foundation.
+        Rainer serves as the Co-Investigator and Technical Director of the project 
+        <a href="http://pelagios-project.blogspot.co.uk">Pelagios 3 - Early Geospatial Documents</a>, which will 
+        establish a global index of places referred to in early maps and geographic texts from antiquity up to
+        the year 1492. Pelagios 3 funded by the Andrew W. Mellon Foundation and will continue until August 2015.
       </p>
     </div>
   </body>
