--- a/bio.html
+++ b/bio.html
@@ -41,10 +41,7 @@
         he lead a research and development task on collaborative semantic media annotation; and his role as
         Co-Investigator and Principal Developer for <a href="http://pelagios-project.blogspot.co.uk">Pelagios</a>, 
         a digital classics network which interconnects heterogeneous digital content from the domain of Ancient 
-        World research by means of a common semantic reference framework. Rainer has also been contributing to open
-        source software, such as the Web archival analysis and visualization tool
-        <a href="http://github.com/ukwa/monitrix">Monitrix</a> or the image annotation library 
-        <a href="http://annotorious.github.io">Annotorious</a>, of which he is also the lead maintainer. Presently,
+        World research by means of a common semantic reference framework. Presently,
         Rainer serves as the Co-Investigator and Technical Director of the project 
         <a href="http://pelagios-project.blogspot.co.uk">Pelagios 3 - Early Geospatial Documents</a>, which will 
         establish a global index of places referred to in early maps and geographic texts from antiquity up to
