--- a/bio.html
+++ b/bio.html
@@ -44,7 +44,7 @@
         World research by means of a common semantic reference framework. Presently,
         Rainer serves as the Co-Investigator and Technical Director of the project 
         <a href="http://pelagios-project.blogspot.co.uk">Pelagios 3 - Early Geospatial Documents</a>, which will 
-        establish a global index of places referred to in early maps and geographic texts from antiquity up to
+        establish a global index of places referred to in early maps and geographic texts predating 
         the year 1492. Pelagios 3 funded by the Andrew W. Mellon Foundation and will continue until August 2015.
       </p>
     </div>
