--- a/bio.html
+++ b/bio.html
@@ -24,7 +24,7 @@
       <p>
 
       <p class="intro">
-        Dr. Rainer Simon is a Scientist at the <a href="http://www.ait.ac.at">AIT Austrian Institute of
+        Dr. Rainer Simon is a Senior Scientist at the <a href="http://www.ait.ac.at">AIT Austrian Institute of
         Technology</a>. He holds a master's in telecommunications engineering and a doctorate in computer 
         science from the Vienna University of Technology. Rainer has been working in the field of multimedia
         information management and retrieval for more than 10 years, with a particular focus on technologies 
