--- a/bio.html
+++ b/bio.html
@@ -30,7 +30,7 @@
         information management and retrieval for more than 10 years, with a particular focus on technologies 
         and user interfaces that process and visualize geospatial information. His current research interest
         is in the application of Linked (Geo) Data methods and visualization techniques in the <i>Digital
-        Humanities</i> and <i>Digital Library</i> domains. Rainer has been involved in several national and 
+        Humanities</i> and <i>Digital Library</i> domains. Rainer has been involved in many national and 
         international research projects, published various papers in his area, and served as a programme committee 
         member and reviewer for relevant scientific workshops and publications in the field.
       </p>
@@ -42,10 +42,10 @@
         Co-Investigator and Principal Developer for <a href="http://pelagios-project.blogspot.co.uk">Pelagios</a>, 
         a digital classics network which interconnects heterogeneous digital content from the domain of Ancient 
         World research by means of a common semantic reference framework. Presently,
-        Rainer serves as the Co-Investigator and Technical Director of the project 
-        <a href="http://pelagios-project.blogspot.co.uk">Pelagios 3 - Early Geospatial Documents</a>, which will 
-        establish a global index of places referred to in early maps and geographic texts predating 
-        the year 1492. Pelagios 3 funded by the Andrew W. Mellon Foundation and will continue until August 2015.
+        Rainer serves as the Co-Investigator and Technical Director of 
+        <a href="http://commons.pelagios.org">Pelagios Commons</a>, an international Digital Humanities initiative
+        which aims to foster better linkages between online resources documenting the past, based on the places 
+        they refer to. Pelagios Commons is funded by the Andrew W. Mellon Foundation and will continue until December 2017.
       </p>
     </div>
   </body>
