--- a/bio.html
+++ b/bio.html
@@ -39,13 +39,11 @@
         Rainer's recent activities include participation in the EU-funded
         <a href="http://www.europeanaconnect.eu/">Europeana<i>Connect</i></a> project, where
         he lead a research and development task on collaborative semantic media annotation; and his role as
-        Co-Investigator and Principal Developer for <a href="http://pelagios-project.blogspot.co.uk">Pelagios</a>, 
-        a digital classics network which interconnects heterogeneous digital content from the domain of Ancient 
-        World research by means of a common semantic reference framework. Presently,
-        Rainer serves as the Co-Investigator and Technical Director of 
-        <a href="http://commons.pelagios.org">Pelagios Commons</a>, an international Digital Humanities initiative
-        which aims to foster better linkages between online resources documenting the past, based on the places 
-        they refer to. Pelagios Commons is funded by the Andrew W. Mellon Foundation and will continue until December 2017.
+        Technical Director of <a href="http://commons.pelagiosorg">Pelagios</a>, 
+        an international Digital Humanities initiative, which interconnects heterogeneous digital content documenting
+        the past by means of a common semantic reference framework. Presently, Rainer serves as the Co-Investigator of 
+        the most recent funding cycle of Pelagios, (<a href="http://commons.pelagios.org">Pelagios Commons</a>).
+        Pelagios Commons is funded by the Andrew W. Mellon Foundation and will continue until December 2017.
       </p>
     </div>
   </body>
