--- a/bio.html
+++ b/bio.html
@@ -40,9 +40,9 @@
         <a href="http://www.europeanaconnect.eu/">Europeana<i>Connect</i></a> project, where
         he lead a research and development task on collaborative semantic media annotation; and his role as
         Technical Director of <a href="http://commons.pelagiosorg">Pelagios</a>, 
-        an international Digital Humanities initiative, which interconnects heterogeneous digital content documenting
+        an international Digital Humanities initiative which interconnects heterogeneous digital content documenting
         the past by means of a common semantic reference framework. Presently, Rainer serves as the Co-Investigator of 
-        the most recent funding cycle of Pelagios, (<a href="http://commons.pelagios.org">Pelagios Commons</a>).
+        the most recent funding cycle of Pelagios, <a href="http://commons.pelagios.org">Pelagios Commons</a>.
         Pelagios Commons is funded by the Andrew W. Mellon Foundation and will continue until December 2017.
       </p>
     </div>
