--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <h1>Dr. Rainer Simon</h1>
       <p class="contactInfo">
-        <a href="mailto:aboutgeo@gmail.com"><img src="img/email.png" title="E-Mail"/></a>
+        <a href="mailto:rainer@no5.at"><img src="img/email.png" title="E-Mail"/></a>
         <a href="http://twitter.com/aboutgeo"><img src="img/twitter.png" title="Twitter"/></a>
         <a href="http://github.com/rsimon"><img src="img/github.png" title="Github"/></a>
         <a href="http://www.linkedin.com/in/rainersimon"><img src="img/linkedin.png" title="LinkedIn"/></a>
