--- a/bio.html
+++ b/bio.html
@@ -42,7 +42,7 @@
 
       <p>
         Presently, Rainer serves as the Technical Director of
-        <a href="http://commons.pelagiosorg">Pelagios Commons</a>, an
+        <a href="http://pelagios.org">Pelagios</a>, an
         international Digital Humanities initiative which interconnects
         heterogeneous digital content documenting the past by means of a
         common semantic reference framework. Pelagios Commons is funded by
