--- a/bio.html
+++ b/bio.html
@@ -41,12 +41,11 @@
       </p>
 
       <p>
-        Presently, Rainer serves as the Technical Director of
+        Until 2019, Rainer served as the Technical Director of
         <a href="http://pelagios.org">Pelagios</a>, an
         international Digital Humanities initiative which interconnects
         heterogeneous digital content documenting the past by means of a
-        common semantic reference framework. Pelagios Commons is funded by
-        the Andrew W. Mellon Foundation and will continue until December 2019.
+        common semantic reference framework.
       </p>
     </div>
   </body>
